[package]
name = "linear-cli"
version = "0.1.0"
edition = "2021"
description = "A powerful CLI for Linear.app"
authors = ["scwrcd"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
tabled = "0.16"
dirs = "5"
toml = "0.8"
anyhow = "1"
