[package]
name = "linear-cli"
version = "0.1.3"
edition = "2021"
description = "A powerful CLI for Linear.app - manage issues, projects, cycles, and more from your terminal"
authors = ["scwrcd"]
license = "MIT"
repository = "https://github.com/Finesssee/linear-cli"
homepage = "https://github.com/Finesssee/linear-cli"
readme = "README.md"
keywords = ["linear", "cli", "project-management", "issues", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "linear-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
tabled = "0.16"
dirs = "5"
toml = "0.8"
anyhow = "1"
dialoguer = "0.11"
console = "0.15"
futures = "0.3"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
